# privacy-pools

./: .gitignore  Cargo.toml  README.md  justfile
.cargo/: config.toml
crates/privacy-pools/: Cargo.toml  build.rs
crates/privacy-pools/artifacts/: manifest.json
crates/privacy-pools/examples/: differential.rs  prove.rs  withdraw_calldata.rs
crates/privacy-pools/fuzz/: Cargo.toml
crates/privacy-pools/fuzz/fuzz_targets/: parse_wtns.rs  vkey.rs
crates/privacy-pools/src/: account.rs  circuit.rs  commitment.rs  context.rs  error.rs  field.rs  flow.rs  inputs.rs  lib.rs  onchain.rs  poseidon.rs  proof.rs  prover.rs  sync.rs  tree.rs  verifier.rs  witness.rs
crates/privacy-pools/tests/: account.rs  context.rs  derivation.rs  end_to_end.rs  field.rs  flow.rs  onchain.rs  proving.rs  proving_fuzz.rs  robustness.rs  sync_recovery.rs  tree.rs
crates/privacy-pools/tests/fixtures/: commitment_default.json  withdraw_default.json
validation/: README.md
validation/anvil/: WithdrawalVerifier.sol  verify.sh
validation/anvil-lifecycle/: Cargo.toml  deploy.sh  lifecycle.sh
validation/anvil-lifecycle/src/: main.rs
validation/differential/: differential.ts  package.json
validation/witness-bench/: Cargo.toml  README.md
validation/witness-bench/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs  pull_circuits.rs
