[workspace]
resolver = "2"
members = ["xtask", "crates/privacy-pools"]
# cargo-fuzz crate has its own toolchain requirements (nightly + libfuzzer).
exclude = ["crates/privacy-pools/fuzz"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/iamwehi/privacy-pools"
rust-version = "1.81"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
