[workspace]
resolver = "2"
members = ["xtask", "crates/privacy-pools"]
# Excluded: the cargo-fuzz crate (nightly + libfuzzer) and the anvil lifecycle
# harness (pulls a full alloy provider + tokio; run explicitly, not in CI tests).
exclude = [
    "crates/privacy-pools/fuzz",
    "validation/anvil-lifecycle",
    "validation/witness-bench",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/iamwehi/privacy-pools"
rust-version = "1.81"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
