[package]
name = "privacy-pools"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Generate and verify Privacy Pools (0xbow) Groth16 withdrawal/commitment proofs in pure Rust with bundled circuit artifacts — no wasmer, no node."
repository.workspace = true
rust-version.workspace = true

[features]
default = ["bundled", "parallel"]
# Embed the circuit artifacts (graph + zkey + vkey) into the binary via
# include_bytes!. Without it, load artifacts from a directory at runtime.
bundled = []
# Multi-threaded proving (rayon). Must be a feature on THIS crate because the
# vendored QAP witness map uses ark_std's `cfg_iter!`, which keys off the
# invoking crate's `parallel` feature — not just the ark deps' features.
parallel = [
    "dep:rayon",
    "ark-ff/parallel",
    "ark-ec/parallel",
    "ark-poly/parallel",
    "ark-std/parallel",
    "ark-groth16/parallel",
]
# HD account key derivation (mnemonic -> master keys -> per-deposit secrets),
# byte-compatible with the 0xbow TypeScript SDK. Pulls bip39 + bip32 (k256).
account = ["dep:bip32", "dep:bip39"]
# On-chain ABI layer: alloy `sol!` bindings (events, view fns, calldata, proof
# structs) + an async Syncer that drives the chain scan over an alloy provider
# (the wallet supplies its own helios-backed transport — none is bundled here).
onchain = ["dep:alloy"]
# The full wallet SDK: account key derivation + on-chain sync/flows.
wallet = ["onchain", "account"]

[dependencies]
# Witness generation (wasmer-free).
circom-witnesscalc = "0.3.0"

# Proving / verification. Matches circom-witnesscalc's arkworks 0.5 line so the
# whole tree resolves to a single arkworks version.
ark-bn254 = "0.5"
ark-ff = "0.5"
ark-ec = "0.5"
ark-poly = "0.5"
ark-relations = "0.5"
ark-serialize = "0.5"
ark-std = "0.5"
ark-groth16 = "0.5"

byteorder = "1"
num-bigint = "0.4"
num-traits = "0.2"
rayon = { version = "1", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

# Input-derivation helpers (commitments, Merkle proofs, context). circomlib-
# compatible Poseidon over BN254; light-poseidon 0.4 tracks arkworks 0.5.
light-poseidon = "0.4"
# keccak256 for scope/label/context derivation.
sha3 = "0.10"

# HD wallet derivation for the `account` feature. `bip39` handles the mnemonic
# (all word counts; bip32's own mnemonic only supports 24 words), `bip32` does
# the BIP-44 secp256k1 path derivation (via k256). Matches viem.
bip32 = { version = "0.5", optional = true }
bip39 = { version = "2", optional = true }

# On-chain ABI + provider abstraction for the `onchain` feature. Pinned to the
# wallet's alloy 2.0.1 so boundary types (Address/U256/Provider/Log) unify — no
# duplicate alloy in the tree. `contract` gives sol! bindings + the Provider
# trait + eth_call; `rpc-types-eth` gives Filter/Log. No http transport: the
# wallet passes its own (helios-backed) provider.
alloy = { version = "2.0.1", optional = true, default-features = false, features = [
    "std",
    "contract",
    "rpc-types-eth",
] }

[dev-dependencies]
proptest = "1"
hex = { workspace = true }
